# openai-serverless

./: .env.example  .gitignore  Makefile  Pipfile  README.md  package.json  pyproject.toml  serverless.yml
functions/: authorizer.py  create_file.py  extract_people_names.py  extract_todo_list.py  list_files.py  list_finetune_jobs.py  list_models.py  prompts.py  split_sentences.py  start_finetune_job.py  upload_finetune_file.py
functions/api/better_answers/: __init__.py  input.py  output.py  prompt.py
functions/encoder/: __init__.py  encoder.json  regex.py  test.py
patches/: serverless-plugin-additional-stacks+1.5.0.patch
resources/: authorizer_function.yml  dynamodb.yml  iam.yml  openai_functions.yml  s3.yml
scripts/: create_jwt.py  sign_jwt.py
